# TelltaleDialogEditor

./: README.md
docs/: README.md
examples/: CMakeLists.txt
examples/DlgEditor/: CMakeLists.txt  LICENSE  crc64.c  dlg.c  gui.cpp  main.cpp  meta.c  prop.c  style.c  tree.c  widgets.cpp
examples/DlgEditor/include/: crc64.h  dlg.h  gui.h  gui.hpp  meta.h  tree.h  ttarch.h  types.h  widgets.hpp
examples/DlgEditor/unix/: CMakeLists.txt
examples/DlgEditor/win32/: CMakeLists.txt
